--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -191,9 +191,10 @@ standard normal distribution, so these values are consistent with the theory.
 %4a
 % consitency with target parameters?
 Using the \textit{Desctiptive Statistics Tool, we find that}
-$${mean} = XX.XXXX$$
-$${std.\ deviation} = XX.XXXX$$
-This is consistent / inconsistent
+$$\mu = 284.6889205$$
+$$\sigma = 5.82582628$$
+This is consistent with the target parameters $\mu=285$ and $\sigma=5$,
+as the values are fairly close, being off by less than a value of 1.
 
 \subsection{Histogram}
 %4b
