--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -200,6 +200,12 @@ as the values are fairly close, being off by less than a value of 1.
 %4b
 % does it follow a normal distribution?
 % does it support the assumption of having a normal distribution
+\begin{figure}[H]
+ \centering
+ \includegraphics[width=\textwidth]{histogram.png}
+ \caption{Relative frequency histogram for 200 observations}
+ \label{histogram}
+\end{figure}
 
 \subsection{} %use the normal probablities sheet
 %4c
