--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -207,9 +207,16 @@ as the values are fairly close, being off by less than a value of 1.
  \label{histogram}
 \end{figure}
 
+The histogram above appears to be an approximately symmetric, normal distribution.
+There are no glaring indicators which would point to the data not following
+a normal distribution.
+
 \subsection{} %use the normal probablities sheet
 %4c
 % can the manufacturer reach the goal of less than 5% unacceptable?
+No. Assuming normality and large sample size, with $\mu = 284.6889205$ and
+$\sigma = 5.82582628$, we find that 8.65\% of the slabs produced are
+unacceptable, which is still above 5\%.
 
 \subsection{} % summarize your findings on TS. Are the changes acceptable?
 %4d
