proofread and check marking rubric

--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -94,7 +94,7 @@ decrease and the fraction above 295 to increase.
 %  \label{}
 % \end{figure}
 
-\section{} %2
+\section{Changes in the Mean and Std. Deviation} %2
 % #2
 % use the normal probablities sheet
 
@@ -232,9 +232,11 @@ affect the normality of the distribution in any significant way.
 %5a
 % parameters of the distibution?
 % binomial probability?
+
+Using the \textit{Binomial Probabilities} worksheet, we obtain the following:
 \begin{table}[H]
  \centering
- \begin{tabular}{|l|l|}
+ \begin{tabular}{|c|c|}
   \hline
   n        & 200    \\ \hline
   x        & 15     \\ \hline
@@ -248,10 +250,12 @@ affect the normality of the distribution in any significant way.
 % parameters of the binomial distribution
 % (the value of p calculated with the normal probablities sheeet)
 % binomial probability?
+Using the \textit{Binomial Probabilities} worksheet, and the \textit{Normal
+ Probabilities} worksheet to find \textit{p} we obtain the following:
 
 \begin{table}[H]
  \centering
- \begin{tabular}{|l|l|}
+ \begin{tabular}{|c|c|}
   \hline
   n        & 200               \\ \hline
   x        & 15                \\ \hline
