--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -67,12 +67,12 @@
 
 As $\sigma$ increases, there is more variation in the tensile strength (makes
 sense, since $\sigma^2=V(x)$). This is seen visually as the curve flattening as
-a result of the frequency count of the mode being lowered, and the frequency
+a result of the frequency count of the mean being lowered, and the frequency
 counts at the more extreme ends being increased. In terms of tensile strength,
 an increase in $\sigma$ does not change the mean but it increases the variation
-in tensile strength. This does, however mean that less of the alloy produced
-will be around the mean tensile strength, and it would increase the fraction of
-alloy slabs with unacceptable tensile strength.
+in tensile strength. This means that less of the alloy produced will be around
+the mean tensile strength, and simultaneously, the fraction of alloy slabs with
+unacceptable tensile strength will increase.
 
 \subsection{}%1b
 % Use normal density sheet. Manipulate the graph and describe the changes.
@@ -166,9 +166,9 @@ data above is consistent with the 68-95-99.7 rule.
 
 \subsection{} % distribution of the standardized values?
 %3c
-It's a normalized standard distibution. -- \textbf{Do I need a number here??}
+% It's a normalized standard distibution. -- \textbf{Do I need a number here??}
 
-k this is my answer for now:
+% k this is my answer for now:
 According to the theory, standardizing the values should result in a standard normal distribution.
 In practice, we observe a distribution that approximates a standard normal distribution.
 
@@ -203,7 +203,7 @@ as the values are fairly close, being off by less than a value of 1.
 \begin{figure}[H]
  \centering
  \includegraphics[width=\textwidth]{histogram.png}
- \caption{Relative frequency histogram for 200 observations}
+ \caption{Tensile strengths for a sample of 200}
  \label{histogram}
 \end{figure}
 
