forgot caption rip

--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -157,7 +157,7 @@ consistent with the theoretical value.
   2          & (275, 295)                                              & 190                & 0.95                        \\ \hline
   3          & (270, 300)                                              & 199                & 0.995                       \\ \hline
  \end{tabular}
- \caption{My caption}
+ \caption{Acceptable slabs within certain standard deviations}
  \label{q3}
 \end{table}
 
