--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -169,9 +169,12 @@ data above is consistent with the 68-95-99.7 rule.
 % It's a normalized standard distibution. -- \textbf{Do I need a number here??}
 
 % k this is my answer for now:
-According to the theory, standardizing the values should result in a standard normal distribution.
-By standardizing these values, we are essentially doing a linear transformation.
-In practice, we observe a distribution that approximates a standard normal distribution.
+According to the theory, standardizing the values should result in a standard
+normal distribution. By standardizing these values, we are essentially doing a
+linear transformation which shifts the mean value and divides it by the standard
+deviation. This should result in a standard normal distribution with $\mu=0$ and
+$\sigma=1$. In practice, we should observe a distribution that approximates a
+standard normal distribution.
 
 
 \subsection{} % use data analysis -> descriptive statistics tool
