--- a/Lab3/report.tex
+++ b/Lab3/report.tex
@@ -60,6 +60,13 @@
 % Use Poisson probabilities sheet.
 % How does change in lambda affect shape of graph?
 % How does the increase affect the quality/number of flaws?
+As $\lambda$ increases, the distribution shifts to the right, since $\lambda$ is
+the mean value of the distribution. We also see that as this distibution shifts
+to the right, the curve flattens as a result of the mean probability decreasing
+while the spread increases. Since Poisson distributions measure the number of
+successes in an interval, and in this case a ``success'' is a flaw in a plastic
+panel, we can clearly see that as $\lambda$ increases, the number of flaws in
+the plastic panels also increase.
 
 \section{}%2
 
