--- a/Lab3/report.tex
+++ b/Lab3/report.tex
@@ -73,6 +73,10 @@ the plastic panels also increase.
 \subsection{}%2a
 % Use Poisson probabilities sheet
 % What value should x have?
+Assuming $\lambda=0.5$, the probability that there are no flaws in a randomly
+selected panel is $P(X=0)$. Using the \textit{Poisson Probabilities} worksheet,
+we find this number to be $0.6065$, or $60.65\%$ of the panels are in perfect
+condition
 
 \subsection{}%2b
 % Use Poisson probabilities sheet
