--- a/Lab3/report.tex
+++ b/Lab3/report.tex
@@ -81,6 +81,13 @@ condition
 \subsection{}%2b
 % Use Poisson probabilities sheet
 % What probability should go in the distribution? Choose carefully
+The percentage of panels with 2 or more flaws can be found as shown below:
+$$P(X\geq2)=1-P(X<2) = 1-P(X\leq1)$$
+Using the \textit{Poisson Probabilities} worksheet,
+we find $P(X\leq1)=0.9098$, so
+$$P(X\geq2) = 1-0.9098 = 0.0902 $$
+So, $9.02\%$ of the panels would need to be scrapped.
+
 
 \subsection{}%2c
 % Use Poisson probabilities sheet
