--- a/Lab3/report.tex
+++ b/Lab3/report.tex
@@ -79,6 +79,7 @@ we find this number to be $0.6065$, or $60.65\%$ of the panels are in perfect
 condition
 
 \subsection{}%2b
+\label{2b}
 % Use Poisson probabilities sheet
 % What probability should go in the distribution? Choose carefully
 The percentage of panels with 2 or more flaws can be found as shown below:
@@ -94,6 +95,11 @@ So, $9.02\%$ of the panels would need to be scrapped.
 % MAYBE there's something useful in part b .. think of them as 10 independent events
 % ex: how do we find trhe probability of getting 2 heads in a row for a coin toss?
 % 1/2 * 1/2 = 1/4
+From \ref{2b}, we know the probability of a single panel not being defective is $P(X\leq1)=0.9098$.
+For ten panels, $$ P(X\leq1)^{10} = 0.9098^{10} = 0.38856110447...$$
+Therefore, the probability that a random sample of 10 panels not containing
+a defective panel is approximately $0.389$.
+
 
 \section{}%3
 
