--- a/Lab3/report.tex
+++ b/Lab3/report.tex
@@ -77,6 +77,7 @@ the plastic panels also increase.
 \subsection{}%2a
 % Use Poisson probabilities sheet
 % What value should x have?
+\label{2a}
 Assuming $\lambda=0.5$, the probability that there are no flaws in a randomly
 selected panel is $P(X=0)$. Using the \textit{Poisson Probabilities} worksheet,
 we find this number to be $0.6065$, or $60.65\%$ of the panels are in perfect
@@ -95,6 +96,7 @@ So, $9.02\%$ of the panels would need to be scrapped.
 
 
 \subsection{}%2c
+\label{2c}
 % Use Poisson probabilities sheet
 % MAYBE there's something useful in part b .. think of them as 10 independent events
 % ex: how do we find trhe probability of getting 2 heads in a row for a coin toss?
@@ -159,16 +161,33 @@ $$\sigma_{\bar{x}} = \frac{\sigma}{\sqrt{n}} =
 Plugging in $\lambda$, and $\sigma_{\bar{x}}$ into the \textit{Normal Probabilities Sheet},
 we find that $P(X \leq 0.30) = 0.0607$.
 
-\section{}%4
+\section{CHECK TO SEE IF YOUR RANDOM NUMBERS ARE GOOD}%4
 % DO NOT CHANGE THE FORMULAS IN THE ROWS AVERAGE, COUNT, AVERAGE summary statistics
 
 \subsection{}%4a
 % Use Simulation sheet in cells B9:BI18
 % Random number generation -> #variables=60 -> randomvars=10
 % -> distribution=Poisson -> seed=100 -> lambda=COUNTIF()
+Using the built in COUNTIF function, we find the number of perfect panels to be
+382. So, the percentage of perfect panels can be found as follows:
+$$\frac{362}{600}\times 100 = 0.60333333...\%$$
+Therefore, about $60.33\%$ of the panels are in perfect condition. Compared with
+the value obtained in \ref{2a} ($60.65\%$), it is pretty close. However, it
+would be unrealistic to expect that these two values are identical, since the
+value obtained in \ref{2a} is a theoretical value for an infinite number of
+trials, while the number obtained here is for a finite amount of plastic panels.
+
 
 \subsection{}%4b
 % count will be in row 42 if you generated the data correctly
+Using the built in COUNTIF function, we find the number of non defective panels to be
+230. So, the percentage of perfect panels can be found as follows:
+$$\frac{230}{600}\times 100 = 0.38333333...\%$$
+Therefore, about $38.33\%$ of the panels are not defective. Compared with
+the value obtained in \ref{2c} ($38.86\%$), it is pretty close. However, it
+would be unrealistic to expect that these two values are identical, since the
+value obtained in \ref{2c} is a theoretical value for an infinite number of
+trials, while the number obtained here is for a finite amount of plastic panels.
 
 \subsection{}%4c
 % Don't over analyze, use squint test
