--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -62,13 +62,15 @@
 
 \section{}%1
 
+\subsection{}%1a
+
+\subsection{}%1b
+
 \section{}%2
 
 \subsection{}%2a
 
 \subsection{}%2b
-
-\subsection{}%2c
 
 \section{}%3
 
@@ -82,13 +84,21 @@
 
 \subsection{}%4b
 
-\subsection{}%4c
-
-\subsection{}%4d
-
 \section{}%5
 
 \subsection{}%5a
+
+\subsection{}%5b
+
+\section{}%6
+
+\subsection{}%6a
+
+\subsection{}%6b
+
+\subsection{}%6c
+
+\subsection{}%6d
 
 % \begin{figure}[H]
 %  \centering
@@ -96,9 +106,5 @@
 %  \caption{Average number of flaws in samples of 30 panels from 1800 plastic panels.}
 %  \label{5a}
 % \end{figure}
-
-
-\subsection{}%5b
-
 
 \end{document}
